<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="app_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="btnText_spotify_app">Spotify Streamer</string>
    <string name="btnText_scores_app">Scores App</string>
    <string name="btnText_library_app">Library App</string>
    <string name="btnText_build_it_bigger_app">Build It Bigger</string>
    <string name="btnText_xyz_app">XYZ Reader</string>
    <string name="btnText_capstone_app">Capstone: My own App</string>
</resources>
