<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/app_title"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_SpotifyApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_orange_light"
            android:onClick="spotifyStreamerApp"
            android:padding="5dp"
            android:text="@string/btnText_spotify_app"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btn_ScoresApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_orange_light"
            android:onClick="scoresApp"
            android:padding="5dp"
            android:text="@string/btnText_scores_app"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btn_LibraryApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_orange_light"
            android:onClick="libraryApp"
            android:padding="5dp"
            android:text="@string/btnText_library_app"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btn_BuildItBiggerApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_orange_light"
            android:onClick="buildItBiggerApp"
            android:padding="5dp"
            android:text="@string/btnText_build_it_bigger_app"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btn_xyzReader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_orange_light"
            android:onClick="xyzReaderApp"
            android:padding="5dp"
            android:text="@string/btnText_xyz_app"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btn_Capstone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_red_light"
            android:onClick="capstoneApp"
            android:padding="5dp"
            android:text="@string/btnText_capstone_app"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>
